apigateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: freelancex.goxtrace.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freelancex-apigateway-service
                port:
                  number: 80
  tls:
    - hosts:
        - freelancex.goxtrace.shop
      secretName: freelancex-tls
